--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,28 @@
 [tool.poetry]
 name = "trip-planner"
 version = "0.1.0"
-description = "Simple ai trip planner"
-authors = ["hrishit"]
+description = "AI-powered travel planning application"
+authors = ["Your Name <your.email@example.com>"]
+packages = [
+    { include = "trip_planner" }
+]
 
 [tool.poetry.dependencies]
-python = ">=3.10.0,<3.12"
-crewai = "0.1.24"
+python = ">=3.10,<4.0"
+crewai = "^0.11.0"
+langchain = "^0.1.0"
+langchain-openai = "^0.0.2"
+streamlit = "^1.32.0"
+pydantic = "^2.6.1"
+plotly = "^5.18.0"
+pandas = "^2.2.0"
+beautifulsoup4 = "^4.12.0"
+requests = "^2.31.0"
 unstructured = '==0.10.25'
 pyowm = '3.3.0'
 python-dotenv = "1.0.0"
-transformers = "^4.44.2"
+openai = "^1.12.0"
+setuptools = "^69.2.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
@@ -24,4 +36,6 @@ ignore = ['W291','W292','W293']
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.mansory.api"
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
