--- a/requirements.txt
+++ b/requirements.txt
@@ -1,195 +1,10 @@
-absl-py==2.2.2
-altair==5.5.0
-anyio==3.7.0
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-astunparse==1.6.3
-attrs==23.1.0
-backcall==0.2.0
-backports.tarfile==1.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
-blinker==1.9.0
-build==1.2.2.post1
-CacheControl==0.14.3
-cachetools==5.5.2
-catboost==1.2.5
-certifi==2021.5.30
-cffi==1.17.1
-chardet==4.0.0
-charset-normalizer==3.4.1
-chart-studio==1.1.0
-cleo==2.1.0
-click==8.1.8
-colorlover==0.3.0
-comm==0.1.3
-contourpy==1.2.1
-crashtest==0.4.1
-cufflinks==0.17.3
-customtkinter==5.2.2
-cycler==0.12.1
-darkdetect==0.8.0
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.9
-dulwich==0.22.8
-executing==1.2.0
-fastjsonschema==2.21.1
-filelock==3.18.0
-findpython==0.6.3
-flatbuffers==25.2.10
-fonttools==4.53.1
-fqdn==1.5.1
-gast==0.6.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-pasta==0.2.0
-graphviz==0.20.3
-grpcio==1.72.0
-h11==0.16.0
-h5py==3.13.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==2.10
-importlib_metadata==8.7.0
-installer==0.7.0
-ipykernel==6.23.2
-ipython==8.14.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.6
-isoduration==20.11.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jedi==0.18.2
-Jinja2==3.0.1
-joblib==1.4.2
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.6.3
-jupyter_client==8.2.0
-jupyter_core==5.3.1
-jupyter_server==2.6.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.7
-kaggle==1.7.4.2
-keras==3.9.2
-keyring==25.6.0
-kiwisolver==1.4.5
-libclang==18.1.1
-Markdown==3.8
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.1
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==2.0.5
-ml_dtypes==0.5.1
-mlxtend==0.23.4
-more-itertools==10.7.0
-msgpack==1.1.0
-namex==0.0.9
-narwhals==1.36.0
-nbclassic==1.0.0
-nbclient==0.8.0
-nbconvert==7.5.0
-nbformat==5.9.0
-nest-asyncio==1.5.6
-notebook==6.5.4
-notebook_shim==0.2.3
-numpy==2.0.0
-opt_einsum==3.4.0
-optree==0.15.0
-overrides==7.3.1
-packaging==25.0
-pandas==2.2.2
-pandocfilters==1.5.0
-parso==0.8.3
-pbs-installer==2025.6.6
-pexpect==4.8.0
-pickleshare==0.7.5
-pillow==10.2.0
-pkginfo==1.12.1.2
-platformdirs==4.3.8
-plotly==5.22.0
-poetry==2.1.3
-poetry-core==2.1.3
-prometheus-client==0.17.0
-prompt-toolkit==3.0.38
-protobuf==5.29.4
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==19.0.1
-pycparser==2.21
-pydeck==0.9.1
-Pygments==2.15.1
-pyparsing==3.1.2
-pyproject_hooks==1.2.0
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-python-slugify==8.0.4
-pytz==2024.1
-PyYAML==6.0
-pyzmq==25.1.0
-qtconsole==5.4.3
-QtPy==2.3.1
-RapidFuzz==3.13.0
-requests==2.32.3
-requests-toolbelt==1.0.0
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==14.0.0
-scikit-learn==1.6.1
-scipy==1.14.0
-seaborn==0.13.2
-Send2Trash==1.8.2
-shellingham==1.5.4
-six==1.16.0
-smmap==5.0.2
-sniffio==1.3.0
-soupsieve==2.4.1
-stack-data==0.6.2
-streamlit==1.44.1
-tenacity==8.3.0
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==3.0.1
-terminado==0.17.1
-text-unidecode==1.3
-threadpoolctl==3.6.0
-tinycss2==1.2.1
-toml==0.10.2
-tomlkit==0.13.3
-tornado==6.3.2
-tqdm==4.67.1
-traitlets==5.9.0
-trove-classifiers==2025.5.9.12
-typing_extensions==4.13.2
-tzdata==2024.1
-uri-template==1.2.0
-urllib3==1.26.6
-virtualenv==20.31.2
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.5.3
-Werkzeug==3.1.3
-widgetsnbextension==4.0.7
-wrapt==1.17.2
-xattr==1.1.4
-xgboost==2.1.0
-xlrd==2.0.1
-zipp==3.23.0
-zstandard==0.23.0
+streamlit
+pandas
+requests
+python-dotenv
+plotly
+openai
+langchain
+crewai
+beautifulsoup4
+pydantic
