--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
 -e .
 streamlit>=1.32.0
 langchain>=0.1.0
-langchain-openai>=0.0.5
+langchain-openai>=0.0.2,<0.0.3
 openai>=1.12.0
 python-dotenv>=1.0.0
 pandas>=2.2.0
 plotly>=5.18.0
-beautifulsoup4>=4.12.0
-pydantic>=2.6.0
-requests>=2.31.0
-crewai>=0.11.0
+geopy>=2.4.1
 tiktoken==0.5.2
+crewai>=0.11.0
